--- a/UmpireBuddy/app/src/main/res/layout/activity_main.xml
+++ b/UmpireBuddy/app/src/main/res/layout/activity_main.xml
@@ -61,29 +61,33 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/strikeNumber"
+        android:id="@+id/strikeTextView"
         android:layout_width="47dp"
-        android:layout_height="46dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/ballNumber"
+        android:id="@+id/ballTextView"
         android:layout_width="46dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/strikeButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.105"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/strikeNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
